gki_defconfig: Enable LRNG
Signed-off-by: Edgars Cīrulis <edgarsscirulis@gmail.com>

--- a/arch/arm64/configs/kalama-gki_defconfig
+++ b/arch/arm64/configs/kalama-gki_defconfig
@@ -2833,6 +2833,95 @@ CONFIG_HW_RANDOM_ARM_SMCCC_TRNG=y
 # CONFIG_XILLYUSB is not set
 CONFIG_RANDOM_TRUST_CPU=y
 CONFIG_RANDOM_TRUST_BOOTLOADER=y
+# CONFIG_RANDOM_DEFAULT_IMPL is not set
+CONFIG_LRNG_AUTO_SELECTED=y
+CONFIG_LRNG=y
+
+#
+# Linux Random Number Generator Configuration
+#
+CONFIG_LRNG_SHA256=y
+CONFIG_LRNG_COMMON_DEV_IF=y
+CONFIG_LRNG_DRNG_ATOMIC=y
+CONFIG_LRNG_SYSCTL=y
+CONFIG_LRNG_RANDOM_IF=y
+
+#
+# Specific DRNG seeding strategies
+#
+# CONFIG_LRNG_AIS2031_NTG1_SEEDING_STRATEGY is not set
+# end of Specific DRNG seeding strategies
+
+#
+# LRNG Interfaces
+#
+# CONFIG_LRNG_KCAPI_IF is not set
+# CONFIG_LRNG_HWRAND_IF is not set
+# CONFIG_LRNG_DEV_IF is not set
+# end of LRNG Interfaces
+
+#
+# Entropy Source Configuration
+#
+# CONFIG_LRNG_RUNTIME_ES_CONFIG is not set
+
+#
+# Common Timer-based Entropy Source Configuration
+#
+CONFIG_LRNG_IRQ_DFLT_TIMER_ES=y
+CONFIG_LRNG_TIMER_COMMON=y
+# CONFIG_LRNG_COLLECTION_SIZE_32 is not set
+# CONFIG_LRNG_COLLECTION_SIZE_256 is not set
+# CONFIG_LRNG_COLLECTION_SIZE_512 is not set
+CONFIG_LRNG_COLLECTION_SIZE_1024=y
+# CONFIG_LRNG_COLLECTION_SIZE_2048 is not set
+# CONFIG_LRNG_COLLECTION_SIZE_4096 is not set
+# CONFIG_LRNG_COLLECTION_SIZE_8192 is not set
+CONFIG_LRNG_COLLECTION_SIZE=1024
+# CONFIG_LRNG_HEALTH_TESTS is not set
+CONFIG_LRNG_RCT_CUTOFF=31
+CONFIG_LRNG_RCT_CUTOFF_PERMANENT=81
+CONFIG_LRNG_APT_CUTOFF=325
+CONFIG_LRNG_APT_CUTOFF_PERMANENT=371
+
+#
+# Interrupt Entropy Source
+#
+CONFIG_LRNG_IRQ=y
+CONFIG_LRNG_CONTINUOUS_COMPRESSION_ENABLED=y
+# CONFIG_LRNG_CONTINUOUS_COMPRESSION_DISABLED is not set
+CONFIG_LRNG_ENABLE_CONTINUOUS_COMPRESSION=y
+# CONFIG_LRNG_SWITCHABLE_CONTINUOUS_COMPRESSION is not set
+CONFIG_LRNG_IRQ_ENTROPY_RATE=256
+
+#
+# Jitter RNG Entropy Source
+#
+# CONFIG_LRNG_JENT is not set
+
+#
+# CPU Entropy Source
+#
+# CONFIG_LRNG_CPU is not set
+CONFIG_LRNG_CPU_FULL_ENT_MULTIPLIER=1
+
+#
+# Scheduler Entropy Source
+#
+# CONFIG_LRNG_SCHED is not set
+
+#
+# Kernel RNG Entropy Source
+#
+# end of Entropy Source Configuration
+
+CONFIG_LRNG_DRNG_CHACHA20=y
+# CONFIG_LRNG_SWITCH_HASH is not set
+# CONFIG_LRNG_SWITCH_DRNG is not set
+CONFIG_LRNG_DFLT_DRNG_CHACHA20=y
+# CONFIG_LRNG_TESTING_MENU is not set
+# CONFIG_LRNG_SELFTEST is not set
+# end of Linux Random Number Generator Configuration
 # end of Character devices
 
 #
